0029156: Coding Rules - eliminate deprecation compiler warnings when targeting macOS 10.12